# openarm_conrtol

./: .gitignore  .gitmodules  README.md  can1_test.py  can_ID_test.py
arm_control/: README.md  realman_control.py  ur_rtde_control.py
interface/openarm_joint_controller/: CMakeLists.txt  QUICKSTART.md  README.md  package.xml
interface/openarm_joint_controller/config/: demo_actions.yaml  dual_heatgun.yaml  simple_test.yaml  test_static_error.yaml
interface/openarm_joint_controller/launch/: joint_controller.launch.py
interface/openarm_joint_controller/scripts/: launch_both_controllers.sh  run_actions.py  test_joint_controller.py
interface/openarm_joint_controller/src/: joint_state_controller.cpp
ur_control/: ur_rtde_control.py
